--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -28,10 +28,10 @@
 /* Foreground slider container */
 .slider-container {
     position: absolute;
-    top: 90px;
+    top: 80px;
     left: 0;
     width: 100vw;
-    height: calc(100vh - 90px);
+    height: calc(100vh - 70px);
     overflow: hidden;
     z-index: 2;
 }
@@ -55,8 +55,8 @@
 }
 
 .slider-image {
-    max-height: 100%;
-    max-width: 100%;
+    min-height: 100%;
+    min-width: 100%;
     object-fit: contain;
 }
 @media (max-width: 1100px) {
