--- a/public/css/template.css
+++ b/public/css/template.css
@@ -312,7 +312,6 @@ video {
 02. HEADER CSS
 ================================================*/
 #header {
-  padding: 5px 0;
   position: fixed;
   left: 0;
   right: 0;
@@ -400,18 +399,18 @@ a#logo {
   justify-content: space-between;
 }
 
-
 .nav-item-menu {
   width: 41%;
+  min-width: 400px !important;
   display: flex;
+  flex-wrap: nowrap;
   justify-content: flex-end;
-  align-items: center;
-  flex-wrap: nowrap !important;
+  align-items: center;;
 }
+
 @media (min-width: 821px) and (max-width: 1024px) {
   .nav-item-menu {
-    min-width: 440px !important;
-
+    min-width: 400px !important;
   }
   .nav-item-menu li{
     margin: 0px 8px !important;
@@ -420,11 +419,14 @@ a#logo {
   .nav-item-logo {
   width: 100%;
   }
+  .nav-item-logo a img{
+    max-width: 230px;
+    height: auto;
+  }
 }
 @media (min-width: 768px) and (max-width: 820px) {
   .nav-item-menu {
-    min-width: 400px !important;
-
+    min-width: 350px !important;
   }
   .nav-item-menu li{
     margin: 0px 8px !important;
@@ -436,6 +438,29 @@ a#logo {
   }
   .nav-item-logo a img{
     max-width: 230px;
+    height: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .navbar{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0px  !important;
+
+  }
+  .nav-item-menu {
+    display: none;
+  }
+  .nav-item-logo {
+    width: 100vw;
+    text-align: left;
+    margin: 0px !important;
+  }
+  .nav-item-logo a img {
+    max-width: 200px;
+    height: auto;
   }
 }
 
