--- a/public/css/template.css
+++ b/public/css/template.css
@@ -448,6 +448,7 @@ a#logo {
     justify-content: flex-start;
     align-items: flex-start;
     padding: 0px  !important;
+    padding-bottom: 10px !important;
 
   }
   .nav-item-menu {
